css/style.css
body, h1, h2, h3, h4, p, a {
    font-weight: normal;
  }
  
* {
    box-sizing: border-box;
    margin:0;
    padding:0;
}

body {
    font-family: 'Arsenal', sans-serif;
    font-size: 12px;
}

.content {
    height: 100%;
    width: 80%;
    margin: auto;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    overflow: scroll;
    -ms-overflow-style: none;
    scrollbar-width: none;
}

.content::-webkit-scrollbar {
    display: none;
}

h1 {
    font-style: normal;
    font-weight: bold;
    font-size: 4em;
    letter-spacing: 0.2em;
    text-transform: uppercase;

    color: #282825;
}

h2 {
    font-style: normal;
    font-weight: normal;
    font-size: 3em;
    text-align: center;
    text-transform: uppercase;

    color: #282825;
}

.italic {
    font-style: italic;
    font-size: 2em;
}

.bold {
    font-weight: bold;
    font-size: 2em;
}

.white {
    color: azure;
}

section {
    height: 100vh;
    width: 100%;
}

.header {
    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%,
        rgba(255, 255, 255, 0.9) 100%),
        url(/img/mountain.JPG);
        background-size: cover;
        background-position: center;
} 

.experience {
    background: linear-gradient(180deg, rgba(255, 255, 255, 0.9) 0%,
        rgba(255, 255, 255, 0) 100%),
        url(/img/forest.jpg);
        background-size: cover;
        background-position: center;
} 

.background {
    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%,
        rgba(255, 255, 255, 0.9) 100%),
        url(/img/forest2.jpg);
        background-size: cover;
        background-position: center;
} 

.contacts {
    background: linear-gradient(180deg, rgba(255, 255, 255, 0.9) 0%,
        rgba(255, 255, 255, 0) 100%),
        url(/img/sunset.jpg);
        background-size: cover;
        background-position: center;
} 

.nav {
    padding-top: 1em;
    display: flex; 
    justify-content: flex-end;
}

.nav ul {
    display: flex;
}

li.nav-item {
    list-style: none;
    padding: 0 5px;
}

a.nav-link {
    text-decoration: none;
}

.nav-item:hover {
    border-bottom: 2px solid #282825;
}

.menu {
    font-size: 2em;
    text-transform: uppercase;
    color: #282825;
}

.title {
    text-align: center;
}

.page-title {
    text-align: center;
    padding-top: 1em;
}

.bottom-button {
    padding-bottom: 1em;
    margin: 0 auto;
}

.button {
    background: rgba(196, 196, 196, 0.3);
    backdrop-filter: blur(2px);
    border-radius: 14px;
    display: block;
    text-decoration: none;
    text-align: center;
    width: max-content;
    padding: 0 1em;
}

.button:hover {
    background: rgba(196, 196, 196, 0.6);
    transition-duration: 500ms;
}

.cards {
    display: flex;
    justify-content: space-between;
}

.card {
    background: rgba(196, 196, 196, 0.3);
    backdrop-filter: blur(2px);
    border-radius: 14px;
    text-align: center;
    flex-wrap: wrap;
    min-width: min-content;
    margin: 1em;
}

.card > ul > li {
    padding: 1em .3em;
    list-style-type: none;
}

.skills {
    text-align: center;
    font-size: 3em;
}

.photo-card {
    display: flex;
    flex-direction: row;
}

.photo-card > img {
    width: 200px;
    border: 1px solid #000000;
    border-radius: 14px;
}

.photo-card > ul {
    margin: auto 0;
    padding: 30px;
    list-style-type: none;
}

.photo-card > ul > li {
    padding: 10px 0;
}

.photo-card > ul > li > a {
    text-decoration: none;
    color: #282825;
}

.photo-card > ul > li:hover {
    border-bottom: 3px solid #282825;
}


.footer {
    text-align: center;
    margin: 0 auto;
    padding-bottom: 1em;
}

.footer > p > a {
    text-decoration: none;
    color: #282825;
}

.footer > p > a:hover {
    border-bottom: 2px solid #282825;
}

